OCW-503 #comment changing border and padding on image-feature items, changed font weight on body to 300 and font size on feature overlay on homepage to 55px.  Fixed row spacing on related articles

--- a/core/static/css/_header.scss
+++ b/core/static/css/_header.scss
@@ -130,6 +130,10 @@ header{
         display: none !important;
       }
 
+    ul li a{
+      font-family: $sans-serif;
+    }
+
     ul.social{
       border-top: $border-white;
       margin-top: 10px;
